--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="searchHint">Search bookname hear...</string>
+    <string name="verifyEmail">please verify your email</string>
+    <string name="verifiyMail">Verification mail sent to the your email address</string>
 </resources>
